# hello-rust-aws-sdk

./: Cargo.toml  rustfmt.toml
src/: main.rs
