[package]
name = "rust-aws-sdk-first"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.12.0"
serde = "1.0.136"
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "main"
path = "src/main.rs"
